--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,8 +6,8 @@
 @import '~@angular/material/theming';
 @include mat-core();
 
-$primary: mat-palette($mat-blue, 500, 100, 700);
-$accent: mat-palette($mat-amber, A200, A100, A400);
+$primary: mat-palette($mat-red, 700, 100, 900);
+$accent: mat-palette($mat-blue-grey, A200, A100, A400);
 $warn: mat-palette($mat-red);
 $theme: mat-light-theme($primary, $accent, $warn);
 @include angular-material-theme($theme);
