feat(welcome): display user location on map

--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -3,6 +3,12 @@ agm-map {
     width: 100vw;
 }
 
+#seperator {
+    color: grey;
+    height: 10vh;
+    width: 100vw;
+}
+
 #sec1 {
     height: 25vh;
 }
