--- a/src/app/shared/sign-in/sign-in.component.html
+++ b/src/app/shared/sign-in/sign-in.component.html
@@ -1,3 +1,13 @@
-<section>
-  <p>Sign in works!</p>
+<section fxLayout>
+  <md-card>
+    <md-card-header>
+      <md-card-title>
+        <p>Choose a Service</p>
+      </md-card-title>
+    </md-card-header>
+
+    <div><h6>Google</h6></div>
+    <div><h6>Facebook</h6></div>
+    <div><h6>Twitter</h6></div>
+  </md-card>
 </section>
