--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -2,16 +2,17 @@
 <section id="sec1" class="text-center">
   <h1>Poptart Fitness</h1>
   <h2>Discover activities and others around you.</h2>
+  <div id="seperator"></div>
 </section>
 
 <!-- Middle Description -->
 <section id="sec2">
-  <agm-map [latitude]="lat" [longitude]="lng"></agm-map>
+  <agm-map [latitude]="(coordinates | async)?.lat" [longitude]="(coordinates | async)?.lng" [zoom]="14"></agm-map>
 </section>
 
 <!-- Signup Button and Stuff -->
 <section id="sec3" class="text-center">
-  <button md-button>Let's Go!</button>
+  <button md-button [routerLink]="['/', 'sign-in']">Let's Go!</button>
   <p>
     Sign in with any existing Google, Facebook, or Twitter account.
   </p>
