--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -2,7 +2,6 @@
 <section id="sec1" class="text-center">
   <h1>Poptart Fitness</h1>
   <h2>Discover activities and others around you.</h2>
-  <div id="seperator"></div>
 </section>
 
 <!-- Middle Description -->
@@ -12,8 +11,9 @@
 
 <!-- Signup Button and Stuff -->
 <section id="sec3" class="text-center">
-  <button md-button [routerLink]="['/', 'sign-in']">Let's Go!</button>
   <p>
     Sign in with any existing Google, Facebook, or Twitter account.
   </p>
+  <pop-sign-in></pop-sign-in>
+
 </section>
