--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -4,8 +4,8 @@ agm-map {
 }
 
 #seperator {
-    color: grey;
-    height: 10vh;
+    background-color: BLACK;
+    height: 3vh;
     width: 100vw;
 }
 
