--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -11,9 +11,7 @@
 
 <!-- Signup Button and Stuff -->
 <section id="sec3" class="text-center">
-  <p>
-    Sign in with any existing Google, Facebook, or Twitter account.
-  </p>
+  <h3>Sign in with any existing Google, Facebook, or Twitter account.</h3>
   <pop-sign-in></pop-sign-in>
 
 </section>
