chore(dependencies): update npm dependencies

--- a/src/app/home/index/index.component.html
+++ b/src/app/home/index/index.component.html
@@ -1,8 +1,8 @@
-<md-tab-group class="demo-tab-group">
-  <md-tab label="Map">
-    <ng-template md-tab-label>
+<mat-tab-group class="demo-tab-group">
+  <mat-tab label="Map">
+    <ng-template mat-tab-label>
       🗺
     </ng-template>
     <pop-home-map></pop-home-map>
-  </md-tab>
-</md-tab-group>
+  </mat-tab>
+</mat-tab-group>
