--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -6,7 +6,7 @@ agm-map {
 }
 
 pop-home-index {
-  md-tab-group {
+  mat-tab-group {
     div.mat-tab-body-wrapper {
       mat-tab-body {
         min-height: calc(100vh - 113px);
