--- a/src/app/home/navbar/navbar.component.html
+++ b/src/app/home/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<md-toolbar color="primary">
+<mat-toolbar color="primary">
   <span>Poptart Fitness</span>
-</md-toolbar>
+</mat-toolbar>
 <ng-content></ng-content>
