--- a/src/app/place/place.component.html
+++ b/src/app/place/place.component.html
@@ -1,6 +1,6 @@
-<md-card (swipeup)="open()" (swipedown)="close()" [class.opened]="opened">
+<mat-card (swipeup)="open()" (swipedown)="close()" [class.opened]="opened">
   <h2 (click)="toggle()">Post Found</h2>
-</md-card>
+</mat-card>
 
 <agm-map [latitude]="(place | async)?.coordinates.lat" [longitude]="(place | async)?.coordinates.lng" [zoom]="18">
   <agm-marker [latitude]="(place | async)?.coordinates.lat" [longitude]="(place | async)?.coordinates.lng"></agm-marker>
