--- a/src/styles/classes.scss
+++ b/src/styles/classes.scss
@@ -1,11 +1,15 @@
 .full-size {
-    width: 100%;
+  width: 100%;
+}
+
+.mat-tab-labels {
+  background-color: #ffffff;
 }
 
 .padding {
-    padding: 16px;
+  padding: 16px;
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
