--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,8 +5,18 @@
     <mat-card-content>
       <h1>{{(user|async)?.name}}</h1>
       <p>Rank: Here</p>
-      <p>Badges: Here</p>
     </mat-card-content>
+  </mat-card>
+</section>
+
+<!-- Badges -->
+<section>
+  <mat-card> {{badges | async |json}}
+    <md-grid-list cols="5" rowHeight="100px" role="list">
+      <!-- <md-grid-tile *ngFor="let badge of badges|async">
+        {{badge/name.name}}
+      </md-grid-tile> -->
+    </md-grid-list>
   </mat-card>
 </section>
 
@@ -15,7 +25,7 @@
   <mat-card>
     <h1>What are your favorite activities?</h1>
     <mat-chip-list>
-      <!--<mat-chip *ngFor="let activity of activites">{{activity.name}}></mat-chip>-->
+      <!-- <mat-chip *ngFor="let activity of activites">{{activity.name}}></mat-chip> -->
     </mat-chip-list>
   </mat-card>
 </section>
