--- a/src/app/place/place.component.scss
+++ b/src/app/place/place.component.scss
@@ -1,12 +1,16 @@
 agm-map {
-  position: relative;
+  position: fixed;
   height: 100vh;
-  width: 100vw;
+  width: 65vw;
+  right: 0;
+  @media (max-width: 600px) and (orientation: portrait) {
+    width: 100vw;
+  }
 }
 
 mat-card {
-  position: absolute;
-  width: 25vw;
+  position: fixed;
+  width: 35vw;
   height: calc(100vh - 48px);
   z-index: 10;
   transition: height .75s;
@@ -22,4 +26,8 @@ mat-card {
       transition: height .75s;
     }
   }
+}
+
+mat-icon.mat-card-avatar {
+  padding: 0px 8px;
 }
