--- a/src/app/home/index/index.component.html
+++ b/src/app/home/index/index.component.html
@@ -1,8 +1,8 @@
 <mat-tab-group class="demo-tab-group">
-  <mat-tab label="Map">
-    <ng-template mat-tab-label>
-      🗺
-    </ng-template>
-    <pop-home-map></pop-home-map>
+  <mat-tab label="Explore">
+    <pop-home-explore></pop-home-explore>
+  </mat-tab>
+  <mat-tab label="Nearby">
+    <pop-home-nearby></pop-home-nearby>
   </mat-tab>
 </mat-tab-group>
