--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -9,6 +9,12 @@ mat-card-title {
   font-size: 1.2rem !important;
 }
 
+mat-sidenav-container {
+  mat-sidenav {
+    width: 300px;
+  }
+}
+
 pop-home-index {
   mat-tab-group {
     div.mat-tab-body-wrapper {
