--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,27 +5,26 @@
     <mat-card-content>
       <h1>{{(user|async)?.name}}</h1>
       <p>Rank: Here</p>
-    </mat-card-content>
-  </mat-card>
+    </md-card-content>
+  </md-card>
 </section>
 
-<!-- Badges -->
-<section>
-  <mat-card> {{badges | async |json}}
-    <md-grid-list cols="5" rowHeight="100px" role="list">
-      <!-- <md-grid-tile *ngFor="let badge of badges|async">
-        {{badge/name.name}}
-      </md-grid-tile> -->
-    </md-grid-list>
-  </mat-card>
+<!-- Trophies -->
+<section fxLayoutAlign="center center">
+  <md-card>
+    <md-card-header>
+      Trophies
+    </md-card-header>
+  </md-card>
 </section>
 
 <!-- Activities -->
 <section>
   <mat-card>
     <h1>What are your favorite activities?</h1>
-    <mat-chip-list>
-      <!-- <mat-chip *ngFor="let activity of activites">{{activity.name}}></mat-chip> -->
-    </mat-chip-list>
-  </mat-card>
+    <md-chip-list #activityChips>
+      <md-chip *ngFor="let activity of activites">{{activity.name}}></md-chip>
+    </md-chip-list>
+    <input mdChipInputFor="activityChips">
+  </md-card>
 </section>
