--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -5,8 +5,18 @@ agm-map {
   }
 }
 
+button.mat-fab {
+  position: fixed;
+  bottom: 16px;
+  right: 16px;
+}
+
 mat-card-title {
   font-size: 1.2rem !important;
+}
+
+mat-dialog-container.mat-dialog-container {
+  padding: 0px;
 }
 
 mat-sidenav-container {
@@ -34,4 +44,10 @@ pop-home-index {
 
 pop-home-nearby {
   background-color: white;
+}
+
+textarea {
+  min-height: 5em;
+  overflow-y: auto;
+  word-wrap: break-word
 }
