--- a/src/app/home/explore/explore.component.html
+++ b/src/app/home/explore/explore.component.html
@@ -1,7 +1,9 @@
 <agm-map [latitude]="(coordsMap | async)?.lat" [longitude]="(coordsMap | async)?.lng" (swipe)="swipe($event)" (centerChange)="centerChange($event)"
   [zoom]="14">
   <agm-marker [latitude]="(coordsUser | async)?.lat" [longitude]="(coordsUser | async)?.lng"></agm-marker>
-  <agm-marker *ngFor="let place of nearMapCenter | async" (markerClick)="markerClick(place.id)" [latitude]="place.coordinates.lat"
-    [longitude]="place.coordinates.lng"></agm-marker>
+  <agm-marker *ngFor="let marker of markers | async" (markerClick)="markerClick(marker)" [latitude]="marker.coordinates.lat"
+    [longitude]="marker.coordinates.lng"></agm-marker>
 </agm-map>
-<button mat-fab (click)="toggleWatch()"><mat-icon>{{(updating | async)? 'gps_fixed' : 'gps_off'}}</mat-icon></button>
+<button mat-fab (click)="toggleWatch()">
+  <mat-icon>{{(updating | async)? 'gps_fixed' : 'gps_off'}}</mat-icon>
+</button>
