--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
-<pop-home-navbar>
-  <router-outlet></router-outlet>
+<pop-home-navbar (activeOutput)="index.active = $event">
+  <pop-home-index #index></pop-home-index>
 </pop-home-navbar>
