--- a/src/app/place/place.component.html
+++ b/src/app/place/place.component.html
@@ -11,7 +11,27 @@
     <mat-chip-list>
       <mat-chip *ngFor="let activity of (place | async)?.activities; let i = index" [color]="chip(i)" selected="true">{{activity}}</mat-chip>
     </mat-chip-list>
+    <mat-list>
+      <h3 mat-subheader>Upcoming Events</h3>
+      <ng-template ngFor [ngForOf]="events | async" let-event *ngIf="(events | async)?.length; else create">
+        <mat-list-item (click)="eventClick(event)">
+          <h4 mat-line>{{event.activity + ' event on ' + (event.starts | date)}}</h4>
+          <p mat-line> {{event.description}}</p>
+        </mat-list-item>
+        <mat-divider></mat-divider>
+      </ng-template>
+    </mat-list>
   </mat-card-content>
 </mat-card>
 
-<button mat-fab *ngIf="(user | async)" (click)="createEvent()"><mat-icon>event_available</mat-icon></button>
+<button mat-fab *ngIf="(user | async)" (click)="createEvent()">
+  <mat-icon>event_available</mat-icon>
+</button>
+
+<ng-template #create>
+  <mat-list-item class="text-center">
+    <h4 mat-line>No Events Found</h4>
+    <p mat-line *ngIf="(user | async)" (click)="createEvent()">(Create One?)</p>
+  </mat-list-item>
+  <mat-divider></mat-divider>
+</ng-template>
