--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,30 +1,45 @@
+<mat-toolbar color="primary">
+  <button mat-button (click)="goBack()">
+    <mat-icon>arrow_back</mat-icon>
+  </button>
+  <span>{{(user|async)?.name}}</span>
+</mat-toolbar>
+
 <!-- Profile Card -->
 <section fxLayoutAlign="center center">
   <mat-card>
-    <img mat-card-image src="" alt="Your profile picture.">
-    <mat-card-content>
+    <mat-card-title>Your Bio</mat-card-title>
+    <img mat-card-image [src]="(user|async)?.photoURL || ''" alt="Your profile picture.">
+    <mat-card-content class="text-center">
       <h1>{{(user|async)?.name}}</h1>
-      <p>Rank: Here</p>
-    </md-card-content>
-  </md-card>
+      <h2>{{(user|async)?.rank}}</h2>
+    </mat-card-content>
+  </mat-card>
 </section>
 
-<!-- Trophies -->
-<section fxLayoutAlign="center center">
-  <md-card>
-    <md-card-header>
-      Trophies
-    </md-card-header>
-  </md-card>
+<!-- Badges --> 
+<section fxLayoutAlign="center center"> 
+  <mat-card>
+    <mat-card-title>Badge Showcase</mat-card-title> 
+    <mat-card-content class="text-center" fxLayout="row" fxLayoutGap="20px">
+      <div *ngFor="let badge of badges|async"> 
+          <p>{{badge.badge.name}}</p>
+          <p>{{badge.badge.description}}</p>
+          <mat-progress-bar [value]="badge.progress"></mat-progress-bar>
+          <p>{{badge.progress}} / 100 %</p>
+      </div>
+    </mat-card-content>
+  </mat-card> 
 </section>
 
 <!-- Activities -->
 <section>
   <mat-card>
-    <h1>What are your favorite activities?</h1>
-    <md-chip-list #activityChips>
-      <md-chip *ngFor="let activity of activites">{{activity.name}}></md-chip>
-    </md-chip-list>
-    <input mdChipInputFor="activityChips">
-  </md-card>
+    <mat-card-title>Your Activities</mat-card-title>
+    <mat-card-subtitle>What are your favorite activities?</mat-card-subtitle>
+    <mat-chip-list class="text-center" #activityChips>
+      <mat-chip>Test Chip</mat-chip>
+      <mat-chip *ngFor="let activity of testactivites">{{activity.name}}</mat-chip>
+    </mat-chip-list>
+  </mat-card>
 </section>
