feat(events): create hook to purge past events

--- a/src/app/place/place.component.html
+++ b/src/app/place/place.component.html
@@ -1,4 +1,4 @@
-<agm-map [latitude]="(place | async)?.coordinates.lat" [longitude]="(place | async)?.coordinates.lng" [zoom]="18">
+<agm-map [latitude]="(place | async)?.coordinates.lat" [longitude]="(place | async)?.coordinates.lng" [zoom]="18" [scrollwheel]="false">
   <agm-marker [latitude]="(place | async)?.coordinates.lat" [longitude]="(place | async)?.coordinates.lng"></agm-marker>
 </agm-map>
 
