--- a/src/app/home/explore/explore.component.html
+++ b/src/app/home/explore/explore.component.html
@@ -1,5 +1,5 @@
 <agm-map [latitude]="(coordsMap | async)?.lat" [longitude]="(coordsMap | async)?.lng" (swipe)="swipe($event)" (centerChange)="centerChange($event)"
-  [zoom]="14">
+  [zoom]="14" [scrollwheel]="false">
   <agm-marker [latitude]="(coordsUser | async)?.lat" [longitude]="(coordsUser | async)?.lng"></agm-marker>
   <agm-marker *ngFor="let marker of markers | async" (markerClick)="markerClick(marker)" [latitude]="marker.coordinates.lat"
     [longitude]="marker.coordinates.lng"></agm-marker>
