--- a/src/app/home/nearby/nearby.component.html
+++ b/src/app/home/nearby/nearby.component.html
@@ -1,10 +1,25 @@
-<mat-list>
+<mat-list class="container">
   <h3 mat-subheader>Nearby {{active}}</h3>
-  <ng-template ngFor [ngForOf]="places | async" let-place>
-    <mat-list-item (click)="itemClick(place)">
-      <h4 mat-line>{{place.name || (place.activity + ' event on ' + (place.starts | date))}}</h4>
-      <p mat-line> {{place.coordinates | distance | async}} miles away</p>
-    </mat-list-item>
-    <mat-divider></mat-divider>
-  </ng-template>
+  <div fxLayout="column" fxLayout.gt-xs="row" fxLayoutWrap>
+    <ng-template ngFor let-place [ngForOf]="places | async">
+      <mat-list-item fxHide.gt-xs="true" [routerLink]="['/', 'place', (place.id || place.placeId)]">
+        <h4 mat-line>{{place.name || (place.activity + ' event on ' + (place.starts | date))}}</h4>
+        <p mat-line>{{place.coordinates | distance | async}} miles away</p>
+      </mat-list-item>
+      <mat-divider [fxHide.gt-xs]="true"></mat-divider>
+      <div fxHide.lt-sm="true" fxFlex.gt-xs="50" fxFlex.gt-sm="33" fxFlex.gt-md="25" class="mat-card-padding">
+        <mat-card>
+          <mat-card-header>
+            <mat-card-title>{{place.name || (place.activity + ' event on ' + (place.starts | date))}}</mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+            <p>{{place.coordinates | distance | async}} miles away</p>
+          </mat-card-content>
+          <mat-card-actions>
+            <a mat-button [routerLink]="['/', 'place', (place.id || place.placeId)]">VIEW PLACE</a>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+    </ng-template>
+  </div>
 </mat-list>
