--- a/src/app/home/nearby/nearby.component.scss
+++ b/src/app/home/nearby/nearby.component.scss
@@ -1,3 +1,5 @@
-* {
-  background-color: #ffffff;
+@media (max-width: 600px) and (orientation: portrait) {
+  * {
+    background-color: #ffffff;
+  }
 }
