--- a/src/styles/classes.scss
+++ b/src/styles/classes.scss
@@ -6,6 +6,14 @@
   width: 100% !important;
 }
 
+.mat-card-padding {
+  padding: 16px;
+}
+
+.mat-divider {
+  border-top-width: 2px !important;
+}
+
 .mat-tab-labels {
   background-color: #ffffff;
 }
