--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,17 +1,20 @@
-<!-- Title -->
-<section id="sec1" class="text-center">
-  <h1>Poptart Fitness</h1>
-  <h2>Discover activities and others around you.</h2>
-</section>
+<agm-map [latitude]="(coordinates | async)?.lat" [longitude]="(coordinates | async)?.lng" [zoom]="14" [scrollwheel]="false"
+  [draggable]="false" [scrollwheel]="false" [gestureHandling]="'none'" [zoomControl]="false" [disableDoubleClickZoom]="true"
+  [streetViewControl]="false" [usePanning]="true" [fullscreenControl]="false"></agm-map>
 
-<!-- Middle Description -->
-<section id="sec2">
-  <agm-map [latitude]="(coordinates | async)?.lat" [longitude]="(coordinates | async)?.lng" [zoom]="14"></agm-map>
-</section>
-
-<!-- Signup Button and Stuff -->
-<section id="sec3" class="text-center">
-  <h3>Sign in with any existing Google, Facebook, or Twitter account.</h3>
-  <pop-sign-in></pop-sign-in>
-
+<section>
+  <div fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-xs="row" fxLayoutWrap>
+    <div fxFlex.gt-xs="50" fxFlex.gt-md="33" class="mat-card-padding">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>Poptart Fitness</mat-card-title>
+          <mat-card-subtitle>Discover activities and others around you.</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          <pop-sign-in></pop-sign-in>
+          <h5 class="text-center">Sign in with any existing Google, Facebook, or Twitter account.</h5>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
 </section>
