feat(activities): check in feature for events; various cleanup of services

--- a/src/app/place/view-event/view-event.component.html
+++ b/src/app/place/view-event/view-event.component.html
@@ -17,6 +17,7 @@
     </div>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button (click)="close()">CANCEL</button>
+    <button mat-button (click)="checkIn()">ATTEND</button>    
+    <button mat-button (click)="close()">CLOSE</button>
   </mat-card-actions>
 </mat-card>
