--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -20,26 +20,26 @@
 <!-- Badges --> 
 <section fxLayoutAlign="center center"> 
   <mat-card>
-    <mat-card-title>Badge Showcase</mat-card-title> 
+    <mat-card-title>Badge Showcase</mat-card-title>
+    <mat-card-subtitle>Check your progress towards goalposts</mat-card-subtitle>
     <mat-card-content class="text-center" fxLayout="row" fxLayoutGap="20px">
-      <div *ngFor="let badge of badges|async"> 
-          <p>{{badge.badge.name}}</p>
-          <p>{{badge.badge.description}}</p>
+      <div *ngFor="let badge of (user | async)?.badges"> 
+          <p>Badge of {{badge.name}}</p>
+          <p>{{badge.description}}</p>
           <mat-progress-bar [value]="badge.progress"></mat-progress-bar>
-          <p>{{badge.progress}} / 100 %</p>
+          <p>{{badge.progress}}</p>
       </div>
     </mat-card-content>
   </mat-card> 
 </section>
 
 <!-- Activities -->
-<!-- <section>
+<section>
   <mat-card>
-    <mat-card-title>Your Activities</mat-card-title>
-    <mat-card-subtitle>What are your favorite activities?</mat-card-subtitle>
-    <mat-chip-list class="text-center" #activityChips>
-      <mat-chip>Test Chip</mat-chip>
-      <mat-chip *ngFor="let activity of testactivites">{{activity.name}}</mat-chip>
+    <mat-card-title>Activity Tokens</mat-card-title>
+    <mat-card-subtitle>Gain points towards activities you attend!</mat-card-subtitle>
+    <mat-chip-list fxLayoutAlign="center">
+      <mat-chip *ngFor="let activity of testactivities">{{activity.amount}} - {{activity.name}}</mat-chip>
     </mat-chip-list>
   </mat-card>
 </section>
