--- a/src/app/home/explore/explore.component.html
+++ b/src/app/home/explore/explore.component.html
@@ -1,5 +1,6 @@
 <agm-map [latitude]="(coordsMap | async)?.lat" [longitude]="(coordsMap | async)?.lng" (centerChange)="centerChange($event)"
-  [zoom]="17" [zoomControl]="false" [streetViewControl]="false" [usePanning]="true" [fullscreenControl]="false" [gestureHandling]="'greedy'">
+  (swipe)="swipe($event)" [zoom]="17" [zoomControl]="false" [streetViewControl]="false" [usePanning]="true" [fullscreenControl]="false"
+  [gestureHandling]="'greedy'">
   <agm-marker [latitude]="(coordsUser | async)?.lat" [longitude]="(coordsUser | async)?.lng" iconUrl="./assets/bluedot.png"></agm-marker>
   <agm-marker *ngFor="let marker of markers | async; trackBy: trackByFn" (markerClick)="markerClick(marker)" [latitude]="marker.coordinates.lat"
     [longitude]="marker.coordinates.lng"></agm-marker>
