--- a/src/app/place/view-event/view-event.component.html
+++ b/src/app/place/view-event/view-event.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-header>
-    <img mat-card-avatar [src]="(profile | async)?.photoURL" [alt]="(profile | async)?.name">
-    <mat-card-title>Hosted By {{(profile | async)?.name}}</mat-card-title>
+    <img mat-card-avatar (click)="viewHost(profile)" [src]="(profile | async)?.photoURL || ''" [alt]="(profile | async)?.name">
+    <mat-card-title (click)="viewHost(profile)">Hosted By {{(profile | async)?.name}}</mat-card-title>
     <mat-card-subtitle>Event on {{(event | async)?.starts | date}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
