--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -17,6 +17,8 @@ mat-card-title {
 
 mat-dialog-container.mat-dialog-container {
   padding: 0px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 mat-sidenav-container {
