feat(places): open modal immediatley to event of route fragment

--- a/src/app/place/place.component.html
+++ b/src/app/place/place.component.html
@@ -9,9 +9,9 @@
   </mat-card-header>
   <mat-card-content>
     <mat-chip-list>
-      <mat-chip *ngFor="let activity of (place | async)?.activities; let i = index" [color]="chip(i)" selected="true">{{activity}}</mat-chip>
+      <mat-chip *ngFor="let activity of (place | async)?.activities; let i = index" [color]="chipColor(i)" selected="true">{{activity}}</mat-chip>
     </mat-chip-list>
-    <div>
+    <div *ngIf="(place | async)?.description">
       <h3>Wikipedia</h3>
       <p>{{(place | async)?.description}} </p>
       <a mat-button class="text-right" *ngIf="(place | async)?.wikipediaId" [href]="'https://en.wikipedia.org/?curid='+(place | async)?.wikipediaId"
@@ -20,7 +20,7 @@
     <mat-list>
       <h3>Upcoming Events</h3>
       <ng-template ngFor [ngForOf]="events | async" let-event *ngIf="(events | async)?.length; else create">
-        <mat-list-item (click)="eventClick(event)">
+        <mat-list-item (click)="viewEvent(event)">
           <h4 mat-line>{{event.activity + ' event on ' + (event.starts | date)}}</h4>
           <p mat-line> {{event.description}}</p>
         </mat-list-item>
