--- a/src/app/place/view-event/view-event.component.html
+++ b/src/app/place/view-event/view-event.component.html
@@ -15,9 +15,17 @@
       <h6>Details:</h6>
       <p>{{(event | async)?.description}}</p>
     </div>
+    <div>
+      <mat-chip-list>
+        <mat-chip *ngFor="let checkIn of checkIns | async" selected color="accent" (click)="viewAttendee(checkIn.uid)">
+          <img [src]="checkIn.uphoto" [alt]="checkIn.uname">
+          {{checkIn.uname}}
+        </mat-chip>
+      </mat-chip-list>
+    </div>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button (click)="checkIn()">ATTEND</button>    
+    <button mat-button (click)="checkIn()">ATTEND</button>
     <button mat-button (click)="close()">CLOSE</button>
   </mat-card-actions>
 </mat-card>
