--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -11,14 +11,28 @@ button.mat-fab {
   right: 16px;
 }
 
+mat-card-content {
+  overflow-y: auto;
+}
+
 mat-card-title {
   font-size: 1.2rem !important;
+}
+
+mat-chip {
+  img {
+    width: 32px;
+    height: auto;
+    border-radius: 50%;
+    margin: -7px 6px -7px -12px;
+  }
 }
 
 mat-dialog-container.mat-dialog-container {
   padding: 0px;
   margin-left: auto;
   margin-right: auto;
+  max-height: 100vh;
 }
 
 mat-sidenav-container {
