--- a/src/app/place/create-event/create-event.component.html
+++ b/src/app/place/create-event/create-event.component.html
@@ -5,7 +5,7 @@
   </mat-card-header>
   <mat-card-content>
     <mat-chip-list>
-      <mat-chip *ngFor="let placeActivity of (place | async)?.activities" [selected]="activity === placeActivity" (click)="activity = placeActivity">{{placeActivity}}</mat-chip>
+      <mat-chip *ngFor="let placeActivity of (place | async)?.activities" [selected]="activity === placeActivity" (click)="activity = placeActivity">{{(placeActivity)}}</mat-chip>
     </mat-chip-list>
     <div id="date-pickers">
       <mat-form-field class="full-width">
