refactor(app): fix quirks of some components and add swipe for nav

--- a/src/app/home/navbar/navbar.component.html
+++ b/src/app/home/navbar/navbar.component.html
@@ -24,6 +24,7 @@
       <mat-icon>more_vert</mat-icon>
     </button>
   </mat-toolbar>
+  <section id="swiper" (swiperight)="sidenav.open()"></section>
   <ng-content></ng-content>
 </mat-sidenav-container>
 
