--- a/src/app/place/view-event/view-event.component.html
+++ b/src/app/place/view-event/view-event.component.html
@@ -6,7 +6,7 @@
   </mat-card-header>
   <mat-card-content>
     <mat-chip-list>
-      <mat-chip selected>{{(event | async)?.activity}}</mat-chip>
+      <mat-chip selected>{{(event | async)?.activity | activity}}</mat-chip>
     </mat-chip-list>
     <div *ngIf="(event | async)?.starts !== (event | async)?.ends">
       <h5>Ends on {{(event | async)?.ends | date}}</h5>
