--- a/src/app/place/place.component.html
+++ b/src/app/place/place.component.html
@@ -13,9 +13,8 @@
     </mat-chip-list>
     <div *ngIf="(place | async)?.description">
       <h3>Wikipedia</h3>
-      <p>{{(place | async)?.description}} </p>
-      <a mat-button class="text-right" *ngIf="(place | async)?.wikipediaId" [href]="'https://en.wikipedia.org/?curid='+(place | async)?.wikipediaId"
-        target="_blank">Read More</a>
+      <p>{{(place | async)?.description}}</p>
+      <a mat-button [href]="'https://en.wikipedia.org/?curid='+(place | async)?.wikipediaId" target="_blank">Read More</a>
     </div>
     <mat-list>
       <h3>Upcoming Events</h3>
@@ -26,18 +25,20 @@
         </mat-list-item>
         <mat-divider></mat-divider>
       </ng-template>
+      <mat-list-item class="text-center">
+        <p mat-line *ngIf="(user | async)" (click)="createEvent()">(Create Event)</p>
+      </mat-list-item>
     </mat-list>
   </mat-card-content>
 </mat-card>
 
-<button mat-fab *ngIf="(user | async)" (click)="createEvent()">
-  <mat-icon>event_available</mat-icon>
-</button>
+<a mat-fab [href]="'https://www.google.com/maps/dir/'+(coordsUser | async)?.lat+','+(coordsUser | async)?.lng+'/'+(place | async)?.coordinates.lat+','+(place | async)?.coordinates.lng"
+  target="_blank">
+  <mat-icon>navigation</mat-icon>
+</a>
 
 <ng-template #create>
   <mat-list-item class="text-center">
     <h4 mat-line>No Events Found</h4>
-    <p mat-line *ngIf="(user | async)" (click)="createEvent()">(Create One?)</p>
   </mat-list-item>
-  <mat-divider></mat-divider>
 </ng-template>
