--- a/src/app/place/view-event/view-event.component.html
+++ b/src/app/place/view-event/view-event.component.html
@@ -18,14 +18,15 @@
     <div>
       <mat-chip-list>
         <mat-chip *ngFor="let checkIn of checkIns | async" selected color="accent" (click)="viewAttendee(checkIn.uid)">
-          <img [src]="checkIn.uphoto" [alt]="checkIn.uname">
-          {{checkIn.uname}}
+          <img [src]="checkIn.uphoto" [alt]="checkIn.uname"> {{checkIn.uname}}
         </mat-chip>
       </mat-chip-list>
     </div>
   </mat-card-content>
   <mat-card-actions>
     <button mat-button (click)="checkIn()">ATTEND</button>
+    <a mat-button [href]="'https://www.google.com/maps/dir/'+(coordsUser | async)?.lat+','+(coordsUser | async)?.lng+'/'+(event | async)?.coordinates.lat+','+(event | async)?.coordinates.lng"
+      target="_blank">NAVIGATE</a>
     <button mat-button (click)="close()">CLOSE</button>
   </mat-card-actions>
 </mat-card>
