--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -5,11 +5,13 @@ agm-map {
   }
 }
 
-button.mat-fab {
+button, a {
+  &.mat-fab {
   position: fixed;
   bottom: 16px;
   right: 16px;
   z-index: 10;
+  }
 }
 
 mat-card-content {
